# gapsi-challenge-2

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
cleanup-job/: Dockerfile  pyproject.toml
cleanup-job/cleanup_job/: job.py  main.py
cleanup-job/cleanup_job/tests/unit/: test_job.py
notifier-service/: Dockerfile  pyproject.toml
notifier-service/notifier_service/: consumer.py  main.py
notifier-service/notifier_service/api/: notifications.py
notifier-service/notifier_service/repositories/: notification_repository.py
notifier-service/notifier_service/tests/unit/: test_notification_repository.py
orders-service/: Dockerfile  alembic.ini  pyproject.toml
orders-service/alembic/: env.py
orders-service/alembic/versions/: 2024_01_01_initial_schema.py
orders-service/orders_service/: main.py
orders-service/orders_service/api/: orders.py
orders-service/orders_service/repositories/: idempotency_repository.py  order_repository.py  outbox_repository.py
orders-service/orders_service/schemas/: order.py
orders-service/orders_service/services/: order_service.py  outbox_publisher.py
orders-service/orders_service/tests/unit/: test_order_service.py  test_schemas.py
processor-service/: Dockerfile  pyproject.toml
processor-service/processor_service/: consumer.py  main.py
processor-service/processor_service/repositories/: order_repository.py
processor-service/processor_service/services/: processor.py
processor-service/processor_service/tests/unit/: test_processor.py
scripts/: integration-test.sh  seed.py
shared/: README.md  pyproject.toml
shared/shared/: config.py  db.py  health.py  logging_config.py  messaging.py  models.py
