[tool.poetry]
name = "notifier-service"
version = "0.1.0"
description = "Notification service for Café Cloud"
authors = ["Kevyn Franco <kevynfranco@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
shared = {path = "../shared"}
fastapi = "^0.111.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
motor = "^3.4.0"
aio-pika = "^9.4.0"
tenacity = "^8.3.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["notifier_service/tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
