[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared utilities for Café Cloud microservices"
authors = ["Kevyn Franco <kevynfranco@gmail.com>"]
readme = "README.md"
packages = [{include = "shared"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
structlog = "^24.1.0"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
